--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,9 +140,11 @@ android {
 dependencies {
     implementation project(':react-native-google-signin')
     implementation project(':react-native-fbsdk')
+    implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -151,3 +153,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services' 
